--- a/ThuVienAnh/appsettings.json
+++ b/ThuVienAnh/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ThuVienAnhConnectionString": "Data Source=HIEP\\SQLEXPRESS;Initial Catalog=ThuVienAnh;User ID=sa;Password=sa;trusted_connection=true;encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
