connect database azure

--- a/ThuVienAnh/appsettings.json
+++ b/ThuVienAnh/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ThuVienAnhConnectionString": "Data Source=HIEP\\SQLEXPRESS;Initial Catalog=ThuVienAnh;User ID=sa;Password=sa;trusted_connection=true;encrypt=false"
+    "ThuVienAnhConnectionString": "Data Source=hiep.database.windows.net;Initial Catalog=ThuVienAnh;User ID=hiep;Password=Songbatdautugio@;trusted_connection=false;encrypt=false"
   },
   "Logging": {
     "LogLevel": {
